# MineLogX-AI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  describe-change-set.txt  fabfile.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  lint.yml.disabled
docs/: bedrock_agent_improvement_plan.md  csv_vectorization_pipeline_plan.md  index.md  opensearch_serverless_setup.md  pdf_vectorization_pipeline_plan.md
docs/RAG/: pdf_vectorizer_EC2.py  rag_agent_EC2.py
docs/agents/: data-analysis.md  guardrails.md  kpi-definitions.md  rag-compliance.md
docs/api/: MineLogXApiEndpoints.md  backend-lambda.md  endpoints.md
docs/architecture/: bedrock-models.md  containers.md  data-flow.md  opensearch-indices.md  overview.md
docs/assets/: example_pipeline.py
docs/contributing/: git-conventions.md  workflow.md
docs/data_analysis_agent/: data_output.json  data_output_c2.json  example_pipeline.py
docs/getting-started/: aws-auth.md  prerequisites.md  quickstart.md
docs/infrastructure/: cloudformation.md  overview.md  terraform.md
docs/operations/: fabric-tasks.md  logs.md  pipelines.md
docs/rag_agent/: Verify_S3Vectors.ipynb  pdf_vectorizer_EC2.py  (+2 more)
frontend/: .gitignore  CLAUDE.md  index.html  pnpm-lock.yaml  tsconfig.app.json
infrastructure/: README.md
onprem-aws/: README.md
scripts/: dev-setup.ps1  dev-setup.sh  discover-aws.ps1  discover-aws.sh
shared/: README.md
(+322 files in other folders)
