[project]
name = "minelogx-ai"
version = "0.1.0"
description = "MineLogX-AI — operational intelligence platform for mining operations on AWS (IaC + Fabric automation, Bedrock/OpenSearch backend)"
requires-python = ">=3.11"
dependencies = [
    "fabric>=3.0",  # pulls invoke + paramiko; used by fabfile.py
]

[tool.uv]
# Repo is tooling, not an installable package — don't build the root project.
package = false
