[project]
name = "minelogx-ai"
version = "0.1.0"
description = "MineLogX-AI — operational intelligence platform for mining operations on AWS (IaC + Fabric automation, Bedrock/OpenSearch backend)"
requires-python = ">=3.11"
dependencies = [
    "fabric>=3.0",  # pulls invoke + paramiko; used by fabfile.py
]

# Installed into the project .venv by `uv sync` so the pre-commit git hook
# resolves against a stable interpreter (see scripts/dev-setup.*).
[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15.20",
]

[tool.uv]
# Repo is tooling, not an installable package — don't build the root project.
package = false

[tool.ruff]
# onprem-aws/demo/ is the client's deployed demo code, pulled verbatim as a
# reference base — keep it faithful, don't lint/reformat it. force-exclude makes
# ruff honor this even when the path is passed explicitly (e.g. by pre-commit).
extend-exclude = ["onprem-aws/demo"]
force-exclude = true
